@@ -24,7 +24,8 @@
                                   ((__name . pattern) (begin form ...))))))))
 
 (define (%defmacro form rule)
-  (rule (car (form 'form))))
+  (let ((formform :: <pair> (form 'form)))
+    (rule (field form_form 'car))))
 
 (define (gentemp) :: <symbol>
   (invoke-static <gnu.expr.Symbols> 'gentemp))
